# ocsf-compile

./: README.md  pyproject.toml
src/ocsf/compile/: __main__.py  compiler.py  location.py  merge.py  options.py  protoschema.py
src/ocsf/compile/planners/: annotations.py  datetime.py  dictionary.py  extends.py  extension.py  find_dependency.py  include.py  object_type.py  planner.py  profile.py  set_category.py  uid.py  uid_names.py
src/ocsf/repository/: __init__.py  definitions.py  helpers.py  reader.py  repository.py
tests/: ocsf-schema.json
tests/ocsf/compile/: test_can_update.py  test_compiler.py  test_merge.py  test_remove_nones.py  test_versus.py
tests/ocsf/compile/planners/: test_dictionary.py  test_extends.py  test_profile.py  test_uid.py
